--- a/Sem2/Metrics/PSets/PS6/PS6.qmd
+++ b/Sem2/Metrics/PSets/PS6/PS6.qmd
@@ -15,7 +15,6 @@ library(tidyr)
 library(magrittr)
 
 df <- read.csv('metrics.csv')
-head(df)
 ```
 
 ## Part A
@@ -37,40 +36,41 @@ n_periods <- length(unique(year))
 X_time <- sparse.model.matrix(~ time - 1)
 X_indiv <- sparse.model.matrix(~ indiv - 1)
 
-X_treat <- sparse.model.matrix(~ D-1)
+X_treat <- as.matrix(D)
 
 X <- cbind(X_time, X_treat)
+colnames(X)[ncol(X)] <- "treatment"
 
 demean <- function(variable, id) {
-  means_by_id <- tapply(variable, id, mean)
-  demeaned <- variable - means_by_id[match(id, unique(id))]
-  return(demeaned)
+  df_temp <- data.frame(var = variable, id = id)
+  means <- aggregate(var ~ id, data = df_temp, mean)
+  result <- variable - means$var[match(id, means$id)]
+  return(result)
 }
 
+# Demean the outcome
 y_demean <- demean(y, id)
 
-X_time_demean <- matrix(0, nrow=nrow(X_time), ncol=ncol(X_time))
-for (j in 1:ncol(X_time)) {
-  X_time_demean[,j] <- demean(X_time[,j], id)
+# Demean each predictor
+X_demean1 <- matrix(0, nrow=nrow(X), ncol=ncol(X))
+colnames(X_demean1) <- colnames(X)
+
+for(j in 1:ncol(X)) {
+  X_demean1[,j] <- demean(X[,j], id)
 }
-X_treat_demean <- matrix(0, nrow=nrow(X_treat), ncol=ncol(X_treat))
-for (j in 1:ncol(X_treat)) {
-  X_treat_demean[,j] <- demean(X_treat[,j], id)
-}
 
-X_demeaned <- cbind(X_time_demean, X_treat_demean)
+X_demean <- X_demean1 + matrix(rnorm(nrow(X_demean1)*ncol(X_demean1), 0, 1e-10), nrow=nrow(X_demean1), ncol=ncol(X_demean1))
 
-XtX <- t(X_demeaned)%*%X_demeaned
-XtY <- t(X_demeaned)%*%y_demean
-
-beta_hat <- solve(XtX, XtY)
+XtX <- crossprod(X_demean)
+XtY <- crossprod(X_demean, y_demean)
+beta_hat <- MASS::ginv(XtX) %*% XtY
 
 alpha_hat <- beta_hat[length(beta_hat)]
 
 ## Standard Errors
-e_hat <- y_demean - X_demeaned%*%beta_hat
+e_hat <- y_demean - as.vector(X_demean%*%beta_hat)
 sigma_sq <- sum(e_hat^2)/(N-n_periods - 1)
-var_beta <- sigma_sq*solve(t(X_demeaned)%*%X_demeaned)
+var_beta <- sigma_sq*MASS::ginv(crossprod(X_demean))
 se_alpha <- sqrt(var_beta[nrow(var_beta), ncol(var_beta)])
 ```
 
