--- a/Sem2/Macro/PSets/PS6/PS6.tex
+++ b/Sem2/Macro/PSets/PS6/PS6.tex
@@ -109,4 +109,76 @@ newborn welfare $V^o$ & & \\
 \caption{Results of the policy experiment}
 \end{table}
 
+\section*{Solutions}
+
+In the case where $\beta = 0.96$, the results of the policy experiment are as follows:
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|l|c|c|}
+\hline
+ & \multicolumn{2}{c|}{Benchmark model} \\
+\cline{2-3}
+ & with SS & without SS \\
+\hline
+capital $K$ & 1.3667 & 1.9481 \\
+\hline
+labor $L$ & 0.20947 & 0.2209 \\
+\hline
+wage $w$ & 1.2573 & 0.0294 \\
+\hline
+interest $r$ & 0.0484 & 0.0294 \\
+\hline
+pension benefit $b$ & 0.9118 & 0 \\
+\hline
+newborn welfare $V^o$ & -2209.9 & -1766.2 \\
+\hline
+\end{tabular}
+\caption{Results of the policy experiment}
+\end{table}
+
+Capital, labor supply, and wages are all higher without social security. The interest rate and welfare, however, are lower. The pension benefit is zero without social security.
+So, we assume the newborn generation would prefer the world without social security. 
+
+\includegraphics[width=\textwidth]{wealth_labor_profiles.png}
+
+The wealth profile is higher without social security, as agents
+hold more wealth without the taxation on their wages.
+The labor supply profile is also higher without social security, as agents are incentivized to work more when they do not have to pay taxes on their wages.
+\\
+
+In the case where $\beta = 0.99$, the results of the policy experiment are as follows:
+
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|l|c|c|}
+\hline
+ & \multicolumn{2}{c|}{Benchmark model} \\
+\cline{2-3}
+ & with SS & without SS \\
+\hline
+capital $K$ & 2.6090 & 2.6092 \\
+\hline
+labor $L$ & 0.2320 & 0.2320 \\
+\hline
+wage $w$ & 1.5294 & 1.5295 \\
+\hline
+interest $r$ & 0.0166 & 0.0165 \\
+\hline
+pension benefit $b$ & \approx 0 & 0 \\
+\hline
+newborn welfare $V^o$ & -1705.4 & -1705.1 \\
+\hline
+\end{tabular}
+\caption{Results of the policy experiment}
+\end{table}
+
+\includegraphics[width=\textwidth]{wealth_labor_profiles99.png}
+
+
+In this case, Everything is practically the same, with slight differences due to rounding.
+There is practically no difference in the capital, labor supply, and wage rates. Further, while
+the case of no social security is still preferred, the difference in welfare is negligible.
 \end{document}
+
